remove code login form

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom css link -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
+    <!-- Custom css animation -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/animation.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/animate.min.css">
   </head>
   <body>
     <noscript>
