--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <!-- Custom css animation -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/animation.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/animate.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/404.css">
   </head>
   <body>
     <noscript>
